--- a/src/app/features/auth/home/home.component.html
+++ b/src/app/features/auth/home/home.component.html
@@ -53,7 +53,7 @@
               <a routerLink="contact.html" class="nav-item nav-link">Contact Us</a>
           </div>
       </div>
-      <button routerLink="/auth/login" class="rounded-full bg-primary px-3 py-2 text-white d-none d-lg-block">LOGIN</button>
+      <button routerLink="/auth" class="rounded-full bg-primary px-3 py-2 text-white d-none d-lg-block">LOGIN</button>
       <button routerLink="/main/dashboard" class="rounded-full bg-primary px-3 py-2 text-white d-none d-lg-block ml-2">REGISTER</button>
 
   </nav>
