--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -199,7 +199,6 @@ html,body {
 }
 
 .auth-container .left {
-  /* margin: 20vh auto; */
   text-align: center;
   height: 100vh;
   background: #fff;
@@ -239,6 +238,29 @@ h5.htxt {
 h5.htxt {
   font-weight: 500 !important;
   line-height: 1.1 !important;
+}
+
+.logo-lg img {
+  height: 100px;
+  width: 150px;
+
+}
+
+.login-text {
+  font-size: 1.625rem;
+  font-weight: 700;
+  line-height: 2rem;
+  color: #222b45;
+}
+
+.login-form .form-group .form-label,
+.form-label {
+  float: left;
+  color: #000000;
+}
+
+.form-control {
+  border-radius: 0;
 }
 
 /*Login ends*/
