--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -44,9 +44,9 @@
         <label class="form-check-label form-label" for="rememberMe">Remember me</label>
       </div>
       <div class="mb-3">
-        <button type="submit" 
-                id="login-submit" 
-                class="btn btn-primary btn-full-width" 
+        <button type="submit"
+                id="login-submit"
+                class="btn btn-primary btn-full-width"
                 (click)='authAttempt()'
                 i18n='Login|Auth Login Action@@authLoginActionBtn'>
           Login
@@ -77,7 +77,5 @@
       </div>
     </div>
   </div>
-  <div style="padding-top: 50px;">
-    <small style="color: #7E8299;">{{ this.utilService.getCurrentYear() }}© Turnkey Africa</small>
-  </div>
+  <app-copyright-footer></app-copyright-footer>
 </div>
