VQ-84 Changed UI for forgot password screen

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,29 @@
-<p>forgot-password works!</p>
+<div>
+  <div class="card-body">
+    <div class="mb-3">
+      <span class="logo-lg">
+        <img src="assets/images/turnkey-logo.png" alt="hostlogo">
+      </span>
+    </div>
+
+    <h4 class="forgot-password-text mb-3">Forgot Password</h4>
+    <p class="text-muted mb-3">Enter your email address and registered phone number to verify your account.</p>
+
+<!--    <div class="alert alert-success" role="alert" *ngIf="saveSuccess">-->
+<!--      Please check your email for OTP to reset your password-->
+<!--    </div>-->
+    <form aria-labelledby="title">
+      <div class="form-group mb-3">
+        <label class="form-label" for="input-email">Your Email</label>
+        <input name="email" id="input-email" formControlName="email" class="form-control" autofocus>
+      </div>
+      <div class="form-group mb-3">
+        <label class="form-label" for="input-phoneNumber">Your Phone Number</label>
+        <input name="phoneNumber" id="input-phoneNumber" formControlName="phoneNumber" class="form-control" autofocus>
+      </div>
+      <button id="subBtn"  class="btn btn-primary btn-full-width">Submit</button>
+    </form>
+  </div>
+
+  <app-copyright-footer></app-copyright-footer>
+</div>
