--- a/src/app/features/base/components/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/features/base/components/dashboard-layout/dashboard-layout.component.html
@@ -1,15 +1,18 @@
 <div class="base">
   <app-header></app-header>
 
-    <div class="base-container">
+  <div class="base-container">
+
+    <div class="base-side-nav">
       <app-sidebar></app-sidebar>
-
-        <div class="base-content">
-            <app-header-sub-menu></app-header-sub-menu>
-            <ng-content></ng-content>
-        </div>
-
     </div>
+
+    <div class="base-content">
+        <app-header-sub-menu></app-header-sub-menu>
+        <ng-content></ng-content>
+    </div>
+
+  </div>
     <!-- <app-footer></app-footer> -->
 
 </div>
