VQ-84 Added Logic for Forgot Password Screen

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -12,16 +12,23 @@
 <!--    <div class="alert alert-success" role="alert" *ngIf="saveSuccess">-->
 <!--      Please check your email for OTP to reset your password-->
 <!--    </div>-->
-    <form aria-labelledby="title">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" aria-labelledby="title">
       <div class="form-group mb-3">
         <label class="form-label" for="input-email">Your Email</label>
         <input name="email" id="input-email" formControlName="email" class="form-control" autofocus>
+        <div *ngIf="f['email'].invalid && (f['email'].dirty || f['email'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
+          <div *ngIf="f['email'].errors?.['required']">Email is required</div>
+          <div *ngIf="f['email'].errors?.['email']">Email address is not valid</div>
+        </div>
       </div>
-      <div class="form-group mb-3">
+      <div class="form-group mb-3" style="padding-top: 10px">
         <label class="form-label" for="input-phoneNumber">Your Phone Number</label>
         <input name="phoneNumber" id="input-phoneNumber" formControlName="phoneNumber" class="form-control" autofocus>
+        <div *ngIf="f['phoneNumber'].invalid && (f['phoneNumber'].dirty || f['phoneNumber'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['phoneNumber'].errors }">
+          <div *ngIf="f['phoneNumber'].errors['required']">Phone Number is required</div>
+        </div>
       </div>
-      <button id="subBtn"  class="btn btn-primary btn-full-width">Submit</button>
+      <button id="subBtn"  class="btn btn-primary btn-full-width" [disabled]="!form.valid">Submit</button>
     </form>
   </div>
 
