VQ-84 Added copyright footer component to OTP Verification Screen

--- a/src/app/features/auth/otp-verification/otp-verification.component.html
+++ b/src/app/features/auth/otp-verification/otp-verification.component.html
@@ -7,5 +7,6 @@
     </div>
     <!-- title-->
     <app-otp (otpResponse)="verifyOtp($event)"></app-otp>
+    <app-copyright-footer></app-copyright-footer>
   </div>
 </div>
